codex-rs/tui/src/bottom_pane/snapshots/codex_tui__bottom_pane__chat_composer__tests__footer_collapse_plan_queue_mode_only.snap
---
source: tui/src/bottom_pane/chat_composer.rs
expression: terminal.backend()
---
"╭──────────────────╮"
"│ › Test           │"
"│                  │"
"│                  │"
"│                  │"
"│                  │"
"│                  │"
"╰──────────────────╯"
"  Plan mode         "
